# trees_from_scratch

./: .gitignore  Main.ipynb  README.md  pyproject.toml
trees/: config.py  data.py  metrics.py  model.py  workflow.py
