[tool.poetry]
name = "trees"
version = "0.1.0"
description = ""
authors = ["Mats Maiwald <mats.maiwald@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.2"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
mypy = "^0.931"
isort = "^5.10.1"
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
